# blockmodel

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst
doc/: block-fit.rst  block-gen.rst  block-pred.rst  blockmodel.rst
etc/cmake/: Findigraph.cmake
etc/scripts/: release.sh
include/block/: blockmodel.h  convergence.h  io.hpp  math.h  matrix.hpp  optimization.h  optimization.hpp  prediction.h  statistics.h  util.hpp  vector.hpp
include/igraph/cpp/: attributes.h  edge_selector.h  graph.h  matrix.h  ptr_vector.h  str_vector.h  types.h  vector.h  vertex_selector.h
include/mtwister/: mt.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  blockmodel.cpp  convergence.cpp  io.cpp  math.cpp  optimization.cpp  prediction.cpp
src/ui/: CMakeLists.txt  SimpleOpt.h  cmd_arguments.cpp  cmd_arguments.h  main.cpp
src/ui/block-fit/: CMakeLists.txt  cmd_arguments.cpp  cmd_arguments.h  main.cpp
src/ui/block-gen/: CMakeLists.txt  cmd_arguments.cpp  cmd_arguments.h  main.cpp
src/ui/block-pred/: CMakeLists.txt  cmd_arguments.cpp  cmd_arguments.h  main.cpp
src/ui/common/: cmd_arguments_base.cpp  cmd_arguments_base.h  graph_util.cpp  graph_util.h  string_util.cpp  string_util.h
test/: CMakeLists.txt  blockmodel_test.cpp  dc_undir_blockmodel_test.cpp  greedy_strategy_test.cpp  moving_average_test.cpp  statistics_test.cpp  test_common.cpp  undir_blockmodel_test.cpp  util_test.cpp  vector_matrix_test.cpp
